@@ -211,6 +211,9 @@ private:
   double m_charge_kwh_grid;
   int m_chargestart_ticker;
   int m_chargestop_ticker;
+  float m_chargestate_lastsoc;
+  int m_timermode_ticker;
+  bool m_timermode_new;
 
 
   // --------------------------------------------------------------------------
@@ -314,7 +317,6 @@ protected:
 protected:
   void UpdateChargePower(float power_kw);
   void UpdateChargeCap(bool charging);
-  void UpdateChargeParams();
 
 public:
   static void ShellPollControl(int verbosity, OvmsWriter* writer, OvmsCommand* cmd, int argc, const char* const* argv);
